# mai-intro-to-machine-learning

./: .gitignore  README.md  requirements.txt
work2/: HOW_TO_RUN.md  Makefile  README.md  TODO.md  __init__.py  distance.py  hepatitis.ipynb  knn.py  mushroom.ipynb  mushrooms.ipynb  preprocess.ipynb  preprocess.py  process_hepatitis.ipynb  pyproject.toml  requirements.txt  run_knn_hepatitis.py  run_knn_mushroom.py  run_reduced_knn_hepatitis.py  run_reduced_knn_mushroom.py  run_svm_hepatitis.py  run_svm_mushroom.py  runtime_estimate.ipynb  svm.py  synthetic.ipynb  voting.py
work2/.ipynb_checkpoints/: synthetic-checkpoint.ipynb
work2/CarlosJimenez-tools/: reduction.py  utils.py
work2/KacperWork-tools/: __init__.py  knn_utils.py  voting.py
work2/helper_files/: data_loading.py  data_preprocessing.py  utils.py
work2/notebooks/: 0.1-CarlosJimenez-hepatitis-training-exploration.ipynb  0.1-CarlosJimenez-mushroom-training-exploration.ipynb  0.1-CarlosJimenez-synthetic.ipynb  0.1-KacperWork-hepatitis-training-exploration.ipynb  0.1-KacperWork-mushroom-training-exploration.ipynb  0.1-ZachParent-explore-hepatitis.ipynb  0.1-ZachParent-explore-mushroom.ipynb  0.1-ZachParent-explore_synthetic.ipynb  0.1-ZachParent-hepatitis.ipynb  0.1-ZachParent-mushroom.ipynb  0.1-ZachParent-runtime_estimate.ipynb  0.3-ZachParent-investigate-knn-positive-error.ipynb  1.0-ZachParent-explore_results.ipynb  1.1-ZachParent-generate-dataset-plots.ipynb  1.2-ZachParent-add-per-fold-results.ipynb  (+3 more)
work3/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
(+1227 files in other folders)
