[build-system]
requires = ["flit_core >=3.2,<4", "setuptools>=74.1.2"]
build-backend = "flit_core.buildapi"

[project]
name = "tools"
version = "0.1.0"
description = "Demonstrating KNN and SVM models with mushroom and hepatitis datasets, as part of the IML Autumn 2024 course."
authors = [
  { name = "Zachary Parent" },
  { name = "Kacper Poniatowski" },
  { name = "Sheena Lang" },
  { name = "Carlos Jiménez Farfán" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["tools"]
force_sort_within_sections = true
