[build-system]
requires = ["setuptools >=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mai-iml-work3-tools"
version = "0.1.0"
description = "Tools for the IML Autumn 2024 course."
authors = [
  { name = "Zachary Parent" },
  { name = "Kacper Poniatowski" },
  { name = "Sheena Lang" },
  { name = "Carlos Jiménez Farfán" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["tools"]
force_sort_within_sections = true
